Se arreglo la falla en la visualizacion de img a causa de un linkeo fallido en el servidor (en local funcionaba)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Ejemplo de tarjeta de proyecto -->
         <div class="col-sm-6 col-lg-4 shadow-drop-center">
           <div class="card h-100">
-            <img src="../PORTAFOLIO/imgs/EstacionamientoCibertec.jpg" class="card-img-top" alt="Proyecto 1">
+            <img src="imgs/EstacionamientoCibertec.jpg" class="card-img-top" alt="Proyecto 1">
             <div class="card-body">
               <h5 class="card-title">Estacionamientos Cibertec Independencia</h5>
               <p class="card-text">App desarrollada con Java Web, utiizando el framework Spring
@@ -77,7 +77,7 @@
 
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100">
-            <img src="../PORTAFOLIO/imgs/ProyectoSupervisor.jpg" class="card-img-top" alt="Proyecto 1">
+            <img src="imgs/ProyectoSupervisor.jpg" class="card-img-top" alt="Proyecto 1">
             <div class="card-body">
               <h5 class="card-title">App Android basica de Supervisores</h5>
               <p class="card-text">Aplicacion para registrar un supervisor en la memoria
@@ -92,7 +92,7 @@
 
         <div class="col-sm-6 col-lg-4 shadow-drop-center">
           <div class="card h-100">
-            <img src="../PORTAFOLIO/imgs/Permisos Laborales.jpg" class="card-img-top" alt="Proyecto 1">
+            <img src="imgs/Permisos Laborales.jpg" class="card-img-top" alt="Proyecto 1">
             <div class="card-body">
               <h5 class="card-title">Permisos Laborales</h5>
               <p class="card-text">App desarrollada con Java Web, utiizando el framework Spring
