Espacio adecuado en los btn para dispositivos moviles estrechos

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         <li class="list-group-item">
           <h5>Instituto Cibertec</h5>
           <p>Computación e Informatica (2022-Actualidad)</p>
-          <a id="btnCertiCiber1" class="shadow btn btn-sm my-button"
+          <a id="btnCertiCiber1" class="shadow btn btn-sm my-button mb-2"
             href="https://1drv.ms/b/c/16b2243148ddcc68/ESYSVp7zfUdPl1qyRGYGSk4BXTs6dSBMYxkcF0kSLMq-MA?e=yV3OTd"
             target="_blank">Certificado Modular 1</a>
-          <a id="btnCertiCiber2" class="shadow btn btn-sm my-button"
+          <a id="btnCertiCiber2" class="shadow btn btn-sm my-button mb-2"
             href="https://1drv.ms/b/c/16b2243148ddcc68/EVKDdhPfxQpNuN3i8dx3AbUBwhtUOhUlJKtb7fS2-xOu5A?e=hXHaqg"
             target="_blank">Certificado Modular 2</a>
 
@@ -128,7 +128,7 @@
         <li class="list-group-item">
           <h5>Vanzys English</h5>
           <p>Ingles basico 12 (2024-09-02 - 2024-09-30)</p>
-          <a id="btnCertiEnglish" class="shadow btn btn-sm my-button"
+          <a id="btnCertiEnglish" class="shadow btn btn-sm my-button mb-2"
             href="https://1drv.ms/b/c/16b2243148ddcc68/EYyDJdfQmztOvE-zfMue0M0BayGRFI2C00sZG8ruNvcNvQ?e=oU2zUt"
             target="_blank">BASIC ENGLISH</a>
         </li>
