--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img src="imgs/Permisos Laborales.jpg" class="card-img-top" alt="Proyecto 1">
             <div class="card-body">
               <h5 class="card-title">Permisos Laborales</h5>
-              <p class="card-text">App desarrollada con Java Web, utiizando el framework Spring
+              <p class="card-text">App desarrollada con Java Web, utilizando el framework Spring
                 para crear un sistema que permita a los trabajadores solicitar un permiso laboral
                 segun la necesidad sin depender de papeleo innecesario y agilizando el proceso.</p>
               <a href="#" class="btn btn-info " id="BTN3">Ver proyecto en GitHub</a>
@@ -162,7 +162,7 @@
     </video>
     <div class="container" id="contHistorial">
       <h2 class="mb-4 shadow p-3 text-center rounded shadow-drop-center" id="historialTitulo">Historial de Visitas</h2>
-      <h7 class="text-end tracking-in-contract">Se guarda en el dispositivo, no se envían datos a otro sitio.</h7>
+      <h7 class="text-end tracking-in-contract">Se guarda en tu dispositivo, no se envían datos a otro sitio.</h7>
       <hr>
       <!-- Formulario CRUD -->
       <form id="entryForm" class="row g-3 mb-4">
